@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Give access to move_to() to plugins.
+ plugins/common/include/plugin_common.h
+ plugins/common/plugin_common.c
+ server/plugins.c
+Nicolas Weeger 2008-05-12
+
 Rewrite NPC communication system. See doc/objects 'J. NPC's Speak out' for more information,
 or check doc/Developers/dialog.dox, or the maps/test/say map.
  common/loader.l Makefile.am object.c
